# Wink

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TODO.md
Engine/: CMakeLists.txt
Engine/Include/WinkEngine/: Content.hpp  Core.hpp  ECS.hpp  GFX.hpp  Resource.hpp  pch.hpp
Engine/Include/WinkEngine/Content/: Image.hpp  Model.hpp
Engine/Include/WinkEngine/Core/: Application.hpp  EngineEvents.hpp  FileWatcher.hpp  Input.hpp  InputTokens.hpp  Logger.hpp  PrimitiveTypes.hpp  Profiler.hpp  Time.hpp  Window.hpp
Engine/Include/WinkEngine/ECS/: Entity.hpp  Scene.hpp
Engine/Include/WinkEngine/ECS/Components/: CameraComponent.hpp  IBLComponent.hpp  LightComponent.hpp  RenderObjectComponent.hpp  TransformComponent.hpp
Engine/Include/WinkEngine/ECS/Systems/: ModelSystem.hpp  TransformSystem.hpp
Engine/Include/WinkEngine/GFX/: Buffer.hpp  Camera.hpp  Framebuffer.hpp  Material.hpp  Mesh.hpp  Renderbuffer.hpp  Renderer.hpp  Shader.hpp  ShaderLoader.hpp  Texture.hpp  Texture2D.hpp  Texture2DArray.hpp  TextureCubemap.hpp  VAO.hpp
Engine/Include/WinkEngine/GFX/RES/: CubemapPool.hpp  Handle.hpp  MaterialPool.hpp  MeshPool.hpp  ModelPool.hpp  ResourcePool.hpp  ShaderPool.hpp  TexturePool.hpp
Engine/Include/WinkEngine/GFX/Renderer/: Data.hpp  GPUData.hpp  IBL.hpp  Pipeline.hpp
Engine/Include/WinkEngine/GFX/Renderer/ForwardPlus/: DepthPrePass.hpp  LightCullingPass.hpp
Engine/Include/WinkEngine/GFX/Renderer/Pipeline/: DepthPrePass.hpp  LightCullingPass.hpp  PostProcessPass.hpp  ShadowPass.hpp
Engine/Include/WinkEngine/GFX/Resource/: CubemapPool.hpp  Handle.hpp  MaterialPool.hpp  MeshPool.hpp  ModelPool.hpp  ResourcePool.hpp  ShaderPool.hpp  TexturePool.hpp
Engine/Include/WinkEngine/Resource/: Handle.hpp  ResourcePool.hpp  ShaderPool.hpp
Engine/Source/Content/: GLTFModel.cpp  Image.cpp
Engine/Source/Core/: Application.cpp  FileWatcher.cpp  Input.cpp  Logger.cpp  Main.cpp  Time.cpp  Window.cpp
Engine/Source/ECS/: Entity.cpp  Scene.cpp
Engine/Source/ECS/Components/: TransformComponent.cpp
Engine/Source/ECS/Systems/: ModelSystem.cpp  TransformSystem.cpp
Engine/Source/GFX/: Buffer.cpp  Buffer.hpp  Camera.cpp  Framebuffer.cpp  Material.cpp  Renderbuffer.cpp  Renderer.cpp  Shader.cpp  Shader.hpp  ShaderLoader.cpp  Texture.cpp  Texture.hpp  Texture2D.cpp  Texture2DArray.cpp  TextureCubemap.cpp  VAO.cpp  VAO.hpp
Engine/Source/GFX/RES/: CubemapPool.cpp  MaterialPool.cpp  MeshPool.cpp  ModelPool.cpp  ShaderPool.cpp  TexturePool.cpp
Engine/Source/GFX/Renderer/: IBL.cpp  Pipeline.cpp
Engine/Source/GFX/Renderer/ForwardPlus/: DepthPrePass.cpp  LightCullingPass.cpp
Engine/Source/GFX/Renderer/Pipeline/: DepthPrePass.cpp  LightCullingPass.cpp  PostProcessPass.cpp  ShadowPass.cpp
Engine/Source/GFX/Resource/: CubemapPool.cpp  MaterialPool.cpp  MeshPool.cpp  ModelPool.cpp  ShaderPool.cpp  TexturePool.cpp
Engine/Source/GFX/Shaders/: Debug.glsl  Debug.glsli  DefaultFS.glsl  DefaultVS.glsl  EquirectToCubemapCS.glsl  FullscreenFS.glsl  FullscreenVS.glsl  IrradianceConvolutionCS.glsl  Light.glsl  Light.glsli  Material.glsl  Material.glsli  PBR.glsl  PBR.glsli  PrefilterEnvMapCS.glsl  SkyboxFS.glsl  SkyboxVS.glsl  ToneMapping.glsl  ToneMapping.glsli  default_fs.glsl  default_vs.glsl
Engine/Source/GFX/Shaders/ForwardPlus/: DepthDebugFS.glsl  DepthDebugVS.glsl  DepthOnlyVS.glsl  LightCullingCS.glsl  LightHeatmapFS.glsl
Engine/Source/GFX/Shaders/Pipeline/: DepthDebugVS.glsl  DepthOnlyVS.glsl  LightHeatmapVS.glsl  PoissonDisk.glsl  PostProcessFS.glsl  ShadowDebugFS.glsl  ShadowDebugVS.glsl  ShadowVS.glsl
Engine/Source/Resource/: ShaderPool.cpp
Sandbox/: CMakeLists.txt
Sandbox/Resources/Models/: sphere.glb
Sandbox/Resources/Models/Building/: license.txt  scene.gltf
Sandbox/Resources/Models/SciFiRadar/: license.txt  scene.gltf
Sandbox/Resources/Models/san-miguel/: san-miguel.gltf  san-miguel_no_alpha.gltf
Sandbox/Source/: Main.cpp
Sandbox/Source/Apps/: App.hpp  ECSApp.hpp  EventsApp.hpp  ForwardPlusApp.hpp  IBLApp.hpp  ModelsApp.hpp  ResourcesApp.hpp  SceneApp.hpp  ShadowsApp.hpp
